Fix: Improved compatibility with older browsers This hides detail logo on older browsers by default, and fixes the invisible chapter text

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -960,8 +960,16 @@ html {
     }
 }
 
+.detailLogo {
+    /* this hides the detail logo by default to make it only show up on modern browsers */
+    display: none;
+}
+
 @supports (aspect-ratio: 1 / 1) {
+    /* this shows the detail logo on modern browsers */
+
     .detailLogo {
+        display: block;
         top: calc(100vh - 10em - var(--primaryItemPageNegativeSpace));
         left: 0;
         width: 40%;
@@ -969,6 +977,10 @@ html {
         margin: auto 30%;
         height: 25vh;
         background-position: bottom;
+    }
+
+    .layout-tv .detailLogo {
+        display: block;
     }
 }
 
@@ -1007,7 +1019,6 @@ html {
 }
 
 .layout-tv .detailLogo {
-    display: block;
     height: 20vh;
     top: 40vh;
     left: 30vw;
@@ -1716,7 +1727,6 @@ progress+span {
 .chapterThumbTextContainer {
     background: var(--cardFooterGradient);
     text-shadow: .1em .1em 0px black;
-    width: auto;
     width: -webkit-fill-available;
     height: -webkit-fill-available;
     padding: 0em 2em 2em 2em;
@@ -1730,6 +1740,7 @@ progress+span {
 
 .chapterCardImageContainer+.innerCardFooter {
     padding: 0em 1em 1em 1em;
+    height: auto;
 }
 
 .layout-mobile .innerCardFooter {
